--- a/style.css
+++ b/style.css
@@ -1,17 +1,32 @@
-/* The @import rule below imports the Playfair Display and Source Sans Pro fonts into the stylesheet. You don't have to edit this line.*/
 @import url("https://fonts.googleapis.com/css2?family=Playfair+Display&family=Source+Sans+Pro:wght@400&display=swap");
 
 body {
+  background-color: #eae2b7;
   color: #003049;
   font-family: "Source Sans Pro", Tahoma, Geneva, Verdana, sans-serif;
   padding: 40px;
 }
 
-/* Set the font family for any h1, h2, or h3 heading */
-h1,
-h2,
-h3 {
+header, footer {
+  text-align: center;
+}
+
+h1, h2, h3 {
   font-family: "Playfair Display", Times, serif;
+}
+
+h1 {
+  font-size: 36px;
+  text-align: center;
+}
+
+h2 {
+  font-size: 30px;
+  text-align: center;
+}
+
+h3 {
+  font-size: 24px;
 }
 
 article {
@@ -27,7 +42,6 @@ p {
   line-height: 1.5;
 }
 
-/* The div container constrains the content width within the main container to 600px */
 div {
   margin: auto;
   width: 600px;
@@ -37,13 +51,34 @@ img {
   width: 100%;
   max-width: 200px;
   height: auto;
+  display: block;
+  margin: auto;
 }
 
 hr {
   border: 1px solid black;
 }
 
-/* Add your solution below */
-
 .image-circle {
+  border: 2px solid #003049;
+  border-radius: 50%;
+}
+
+a {
+  color: #d62828;
+}
+
+a:hover {
+  color: #f77f00;
+}
+
+nav ul {
+  list-style-type: none;
+  padding: 0;
+  margin: 0;
+}
+
+nav li {
+  display: inline;
+  margin-right: 20px;
 }
