--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@ body {
   color: #003049;
   font-family: "Source Sans Pro", Tahoma, Geneva, Verdana, sans-serif;
   padding: 40px;
-  text-align: center;
+  text-align: left;
 }
 
 header, footer {
@@ -14,6 +14,7 @@ header, footer {
 
 h1, h2, h3 {
   font-family: "Playfair Display", Times, serif;
+  text-align: center;
 }
 
 h1 {
@@ -74,9 +75,14 @@ nav ul {
   list-style-type: none;
   padding: 0;
   margin: 0;
+  text-align: center;
 }
 
 nav li {
   display: inline;
   margin-right: 20px;
+}
+
+ul {
+  text-align: left;
 }
