--- a/style.css
+++ b/style.css
@@ -5,15 +5,11 @@ body {
   color: #003049;
   font-family: "Source Sans Pro", Tahoma, Geneva, Verdana, sans-serif;
   padding: 40px;
-  text-align: center; 
-}
-
-header, footer, nav ul, section {
-  text-align: center;
 }
 
 h1, h2, h3 {
   font-family: "Playfair Display", Times, serif;
+  text-align: center;
 }
 
 h1 {
@@ -30,15 +26,12 @@ h3 {
 
 article {
   padding: 50px 0;
+  width: 600px;
+  margin: auto;
 }
 
 p {
   line-height: 1.5;
-}
-
-div {
-  margin: auto;
-  width: 600px;
 }
 
 img {
@@ -51,6 +44,8 @@ img {
 
 hr {
   border: 1px solid black;
+  width: 600px;
+  margin: auto;
 }
 
 .image-circle {
@@ -60,24 +55,28 @@ hr {
 
 a {
   color: #d62828;
+  padding: 5px;
 }
 
 a:hover {
   color: #f77f00;
 }
 
-nav ul {
-  list-style-type: none;
-  padding: 0;
-  margin: 0;
-}
-
-nav li {
-  display: inline;
-  margin-right: 20px;
-}
-
 ul, ol {
-  text-align: left;
-  display: inline-block;
+  margin: auto;
+  width: 500px;
+  padding: 10px;
+}
+
+nav {
+  text-align: center;
+}
+
+div {
+  margin: auto;
+  width: 600px;
+}
+
+footer div {
+  text-align: center;
 }
